minor fixes regarding output suppression of masaslin

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -6,9 +6,9 @@ chapterPreamble()
 ```
 
 
-## Introduction to differential abundance analysis (DAA)
+## Introduction to differential abundance analysis
 
-*What is DAA and why do we do it?*
+*What is differential abundance analysis (DAA) and why do we do it?*
 
 In this section we will work with one of the 
 [openly available datasets](https://microbiome.github.io/mia/reference/mia-datasets.html) in mia to illustrate how to perform differential abundance
@@ -265,7 +265,7 @@ Lastly, we will illustrate how to use MaAsLin2, which is the next generation of
 MaAsLin. As it is based on generalized linear models, it is flexible for different study designs and covariate
 structures. The official package tutorial can be found [here](https://github.com/biobakery/biobakery/wiki/maaslin2). 
 
-```{r}
+```{r results = "hide"}
 # maaslin expects features as columns and samples as rows 
 # for both the asv/otu table as well as meta data 
 asv <- t(assay(tse))
@@ -285,6 +285,9 @@ fit_data <- Maaslin2(
   standardize = FALSE,
   min_prevalence = 0 # prev filterin already done
 )
+```
+
+```{r}
 # which genera are identified as differentially abundant? (leave out "head" to
 # see all)
 kable(head(filter(fit_data$results, qval <= 0.05)))
@@ -292,7 +295,6 @@ kable(head(filter(fit_data$results, qval <= 0.05)))
 # It contains also figures to visualize the difference between genera 
 # for the significant ones.
 ```
-
 
 
 ### Comparison of the methods
@@ -327,7 +329,7 @@ summ <- full_join(
   )
 
 # This is how it looks like:
-head(kable(summ))
+kable(head(summ))
 ```
 
 Now we can answer our questions:
