random variation caused overlooking an error pushed to master

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -83,6 +83,9 @@ tse <- tse[ ,colData(tse)$pheno != "Overwt"]
 colData(tse)$pheno <- fct_drop(colData(tse)$pheno, "Overwt")
 # how many observations do we have per group?
 count(as.data.frame(colData(tse)), pheno) %>% kable()
+# set a seed because some tools can randomly vary and then produce 
+# different results:
+set.seed(1)
 ```
 
 ### Prevalence Filtering 
@@ -342,10 +345,10 @@ summarise(summ, across(where(is.logical), sum)) %>%
 filter(summ, score == 3) %>% kable()
 ```
 
-We see that while each method identified at least 8 genera as differentially
-abundant. Interestingly, ALDEx2 identified only 8 genera. Thus, all of those
-were identified by both of the other methods. We could plot the data for any
-method or for those taxa that were identified by all methods:
+We see that each method identified at least 9 genera as differentially
+abundant. Eight of those that were identified by ALDEx2,
+were also identified by both of the other methods. We could plot the data for 
+any method or for those taxa that were identified by all methods:
 
 
 
@@ -367,6 +370,7 @@ robust_plots <- plots[summ$score == 3]
 
 
 # to display this nicely in the book we use patchwork here:
+# (we show first 8)
 robust_plots[[1]] + 
   robust_plots[[2]] + 
   robust_plots[[3]] + 
