testing to modify

--- a/60_networks.Rmd
+++ b/60_networks.Rmd
@@ -11,7 +11,7 @@ chapterPreamble()
 
 Various R packages are available for the identification of
 co-occurrence networks and measuring associations in taxonomic
-abundance data. SPIEC-EASI [@Kurtz2015] is a common choice, and often
+abundance data. SPIEC-EASI [@Kurtz2015] is a popular choice, and often
 faster than a related method SparCC [@Friedman2012];
 [propr](https://cran.r-project.org/web/packages/propr/index.html)
 [@Quinn2017] is another package that utilizes the concept of
