--- a/21_microbiome_community.Rmd
+++ b/21_microbiome_community.Rmd
@@ -66,7 +66,7 @@ tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
 tse_phylum <- transformFeatures(tse_phylum, abund_values = "clr", 
                                 method = "z", name = "clr_z")
 # Melts the assay
-df <- meltAssay(tse_phylum, assay_name = "clr_z")
+df <- meltAssay(tse_phylum, abund_values = "clr_z")
 
 # Determines the scaling of colours
 maxval <- round(max(abs(df$clr_z)))
