updated intro text and added refs

--- a/book.bib
+++ b/book.bib
@@ -1,5 +1,66 @@
 
 
+@Book{OMA,
+  author =	 {Leo Lahti and Sudarshan Shetty and Felix M Ernst and others},
+  title =	 {Orchestrating Microbiome Analysis with Bioconductor [beta version]},
+  year =	 2021,
+  url =		 {microbiome.github.io/oma/}
+}
+
+
+
+
+@Article{Shetty2019,
+  author =	 {Sudarshan Shetty and Leo Lahti},
+  title =	 {Microbiome data science},
+  journal =	 {Journal of Biosciences},
+  year =	 2019,
+  volume =	 44,
+  pages =	 115,
+  month =	 {October},
+  doi =		 {10.1007/s12038-019-9930-2},
+  note =	 {Preprint openly available at:
+                  https://openresearchlabs.github.io/publications/papers/2019-Shetty-MDS.pdf},
+  status =	 {bioscience},
+  keywords =	 {review}
+}
+
+
+@Article{Callahan2016,
+  author =	 {Ben J. Callahan and Kris Sankaran and Julia
+                  A. Fukuyama and Paul J. McMurdie and Susan
+                  P. Holmes},
+  title =	 {Bioconductor Workflow for Microbiome Data Analysis:
+                  from raw reads to community analyses [version 2;
+                  peer review: 3 approved]},
+  journal =	 {F1000Research},
+  year =	 2016,
+  volume =	 5,
+  pages =	 1492,
+  doi =		 {10.12688/f1000research.8986.2}
+}
+
+
+@Article{Amezquita2020natmeth,
+  author =	 {Robert A. Amezquita and Aaron T.L. Lun and Etienne
+                  Becht and Vince J. Carey and Lindsay N. Carpp and
+                  Ludwig Geistlinger and Federico Marini and Kevin
+                  Rue-Albrecht and Davide Risso and Charlotte Soneson
+                  and Levi Waldron and Hervé Pagès and Mike L. Smith
+                  and Wolfgang Huber and Martin Morgan and Raphael
+                  Gottardo and Stephanie C. Hicks},
+  title =	 {Orchestrating single-cell analysis with
+                  Bioconductor},
+  journal =	 {Nature Methods},
+  year =	 2020,
+  volume =	 17,
+  pages =	 137--145,
+  doi =		 {10.1038/s41592-019-0654-x}
+}
+
+
+
+
 @Article{Quinn2017,
   author =	 {Quinn, T.P. and Richardson, M.F. and Lovell, D. and
                   Tamsyn M. Crowley},
@@ -95,6 +156,9 @@
   year =	 2019,
   url =		 {https://www.huber.embl.de/msmb/}
 }
+
+
+
 
 
 @Book{Amezquita2020,
