--- a/index.Rmd
+++ b/index.Rmd
@@ -17,17 +17,31 @@ date: "`r rebook::openingDetails(Copyright='', Source=.gh_url)`"
 url: "`r .gh_url`"
 ---
 
-# Preface {-}
+# Welcome {-}
 
-This website is a book on microbiome analysis in the Bioconductor universe and
-is showing common principles and workflows of performing microbiome analysis.
 
-The book was borne out of necessity, while updating tools for microbiome
-analysis to work with common classes of the Bioconductor project handling 
-count data of various sorts. It is heavily influenced by similar resources, such
-as the [Orchestrating Single-Cell Analysis with Bioconductor](https://www.nature.com/articles/s41592-019-0654-x)
-book, [phyloseq tutorials](http://joey711.github.io/phyloseq/tutorials-index)
-and [microbiome tutorials](https://microbiome.github.io/tutorials/).
+<a href="https://bioconductor.org"><img src="`r rebook::BiocSticker('animated')`" width="200" alt="Bioconductor Sticker" align="right" style="margin: 0 1em 0 1em" /></a>
+
+
+You are reading the online book, **Orchestrating Microbiome Analysis
+with Bioconductor** [@OMA], where we go through common strategies and
+workflows in microbiome data science. The book shows through concrete
+examples how you can use some of the latest advances in the
+R/Bioconductor ecosystem for microbiome data manipulation, analysis,
+and reproducible reporting. The book was borne out of necessity, while
+updating microbiome analysis tools to work with Bioconductor classes
+that provide support for multi-modal data collections. At the same
+time, the techniques are more generic and often applicable in other
+contexts as well.
+
+This work is heavily influenced by similar resources, such as the
+Orchestrating Single-Cell Analysis with Bioconductor [@Amezquita2020natmeth],
+[phyloseq tutorials](http://joey711.github.io/phyloseq/tutorials-index) [@Callahan2016] and
+[microbiome tutorials](https://microbiome.github.io/tutorials/) [@Shetty2019].
+This book extends the previous efforts of such related work, teaching the grammar
+of Bioconductor workflows and thus supporting the
+adoption of general data analysis skills in the analysis of large,
+hierarchical multi-modal data collections.
 
 We focus on microbiome analysis tools, new, updated and established methods.
 In the *Introduction* section, we show how to work with the key data 
@@ -35,12 +49,20 @@ infrastructure `TreeSummarizedExperiment` and related classes, how this
 framework relates to other infrastructure and how to load microbiome analysis 
 data to work with in the context of this framework.
 
+This book is organized into three parts. We start by introducing the
+material and link to further resources for learning R and
+Bioconductor. We will describe the microbiome data containers, the
+TreeSummarizedExperiment class.
+
 The second section, *Focus Topics*, is all about the steps for analyzing
 microbiome data, beginning with the most common steps and progressing to
 more specialized methods in subsequent sections.
 
-The third section, *Appendix*, contains the rest of things we didn't find 
-another place for, yet.
+The third part, **Workflows**, provides primarily code detailing the
+analysis of various datasets throughout the book.
+
+The final section, *Appendix*, provides links to further resources.
+
 
 ```{r include=FALSE}
 # global knitr options
