improving book organization

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -1,3 +1,7 @@
+# (PART) Focus Topics {-}
+
+# Data manipulation {#manipulation}
+
 # Taxonomic Information {#taxonomic-information}
 
 ```{r setup, echo=FALSE, results="asis"}
