--- a/index.Rmd
+++ b/index.Rmd
@@ -58,10 +58,19 @@ The second section, *Focus Topics*, is all about the steps for analyzing
 microbiome data, beginning with the most common steps and progressing to
 more specialized methods in subsequent sections.
 
-The third part, **Workflows**, provides primarily code detailing the
-analysis of various datasets throughout the book.
+The third part, *Workflows*, provides case studies for the
+various datasets used throughout the book.
 
 The final section, *Appendix*, provides links to further resources.
+
+
+--------------
+
+The book is written in RMarkdown with the bookdown R package. OMA is a
+collaborative effort. Several individuals who have contributed
+methods, workflows and improvements are acknowledged in the Appendix.
+This online resource is **free to use** with the
+[Creative Commons Attribution-NonCommercial 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/) License.
 
 
 ```{r include=FALSE}
