--- a/04_datainfra.Rmd
+++ b/04_datainfra.Rmd
@@ -389,7 +389,7 @@ features, but this is not a must have. This means there can be features, which
 are not linked to nodes, and nodes, which are not linked to features. To change
 the links in an existing object, the `changeTree` function is available.
 
-## Data conversion
+## Data manupulation
 
 Sometimes custom solutions are needed for analyzing the data. `mia` contains a 
 few functions to help in these situations.
@@ -408,6 +408,167 @@ molten_se <- meltAssay(se,
                        abund_values = "relabundance")
 molten_se
 ```
+
+### Subsetting
+
+**Subsetting** data helps to draw the focus of analysis on particular sets of samples and / or features. When dealing with large data sets, the subset of interest can be extracted and investigated separately. This might improve performance and reduce the computational load.
+
+Load:
+
+* mia
+* dplyr
+* knitr
+* data `GlobalPatterns`
+
+```{r include = FALSE}
+# load libraries and data
+library(mia)
+library(dplyr)
+library(knitr)
+```
+
+Let us store `GlobalPatterns` into `se` and check its original number of features (rows) and samples (columns). **Note**: when subsetting by sample, expect the number of columns to decrease; when subsetting by feature, expect the number of rows to decrease.
+
+```{r}
+# store data into se and check dimensions
+data("GlobalPatterns")
+se <- GlobalPatterns
+# show dimensions
+dim(se) ## [1] n°features    n°samples
+```
+
+#### Subset by sample (column-wise)
+
+For the sake of demonstration, here we will extract a subset containing only the samples of human origin (feces, skin or tongue), stored as `SampleType` within `colData(se)`.
+
+First, we would like to see all the possible values that `SampleType` can take on and how frequent those are: 
+
+```{r}
+# inspect possible values for SampleType
+unique(colData(se)$SampleType)
+```
+```{r eval = FALSE}
+# show recurrence for each value
+colData(se)$SampleType %>% table()
+```
+```{r echo = FALSE}
+# show recurrence for each value
+colData(se)$SampleType %>% table() %>% kable() %>%
+    kableExtra::kable_styling("striped", latex_options="scale_down") %>% 
+    kableExtra::scroll_box(width = "100%")
+```
+
+**Note**: after subsetting, expect the number of columns to equal the sum of the recurrences of the samples that you are interested in. For instance, `ncols = Feces + Skin + Tongue = 4 + 3 + 2 = 9`.
+
+Next, we _logical index_ across the columns of `se` (make sure to leave the first index empty to select all rows) and filter for the samples of human origin. For this, we use the information on the samples from the meta data `colData(se)`.
+
+```{r}
+# subset by sample
+se_subset_by_sample <- se[ , colData(se)$SampleType == "Feces" | colData(se)$SampleType == "Skin" | colData(se)$SampleType == "Tongue"]
+# show dimensions
+dim(se_subset_by_sample)
+```
+
+As a sanity check, the new object `se_subset_by_sample` should have the original number of features (rows) and a number of samples (columns) equal to the sum of the samples of interest (in this case 9).
+
+Several characteristics can be used to subset by sample:
+
+* origin
+* sampling time
+* sequencing method
+* DNA / RNA barcode
+* cohort
+
+#### Subset by feature (row-wise)
+
+Similarly, here we will extract a subset containing only the features that belong to the Phyla "Actinobacteria" and "Chlamydiae", stored as `Phylum` within `rowData(se)`. However, subsetting by feature implies a few more obstacles, such as the presence of NA elements and the possible need for agglomeration.
+
+As previously, we would first like to see all the possible values that `Phylum` can take on and how frequent those are:
+  
+```{r}
+# inspect possible values for Phylum
+unique(rowData(se)$Phylum)
+```
+```{r eval = FALSE}
+# show recurrence for each value
+rowData(se)$Phylum %>% table()
+```
+```{r echo = FALSE}
+# show recurrence for each value
+rowData(se)$Phylum %>% table() %>% kable() %>%
+    kableExtra::kable_styling("striped", latex_options="scale_down") %>% 
+    kableExtra::scroll_box(width = "100%")
+```
+
+**Note**: after subsetting, expect the number of columns to equal the sum of the recurrences of the feature(s) that you are interested in. For instance, `nrows = Actinobacteria + Chlamydiae = 1631 + 21 = 1652`.
+
+Depending on your research question, you might need to or need not agglomerate the data in the first place: if you want to find the abundance of each and every feature that belongs to Actinobacteria and Chlamydiae, agglomeration is not needed; if you want to find the total abundance of all the features that belong to Actinobacteria or Chlamydiae, agglomeration is recommended.
+
+##### Not agglomerated data
+
+Next, we _logical index_ across the rows of `se` (make sure to leave the second index empty to select all columns) and filter for the features that fall in either Actinobacteria or Chlamydiae. For this, we use the information on the samples from the meta data `rowData(se)`.
+
+Because the expression within the brackets has to be logical (whether TRUE or FALSE), the terms separated by the OR operator `|` are enclosed within parentheses. Then, the term after the AND operator `&` filters out all the features that present a NA in place of Phylum.
+
+```{r}
+# subset by feature
+se_subset_by_feature <- se[(rowData(se)$Phylum == "Actinobacteria" | rowData(se)$Phylum == "Chlamydiae") & !is.na(rowData(se)$Phylum), ]
+# show dimensions
+dim(se_subset_by_feature)
+```
+
+As a sanity check, the new object `se_subset_by_feature` should have the original number of samples (columns) and a number of features (rows) equal to the sum of the features of interest (in this case 1652).
+
+##### Agglomerated data
+
+When total abundances of certain Phyla are of relevance, the data is initially agglomerated by Phylum. Then, similar steps as in the case of not agglomerated data are followed.
+
+```{r}
+# agglomerate by Phylum
+se_phylum <- se %>% agglomerateByRank(rank = "Phylum")
+
+# subset by feature and get rid of NAs
+se_phylum_subset_by_feature <- se_phylum[(rowData(se_phylum)$Phylum == "Actinobacteria" | rowData(se_phylum)$Phylum == "Chlamydiae") & !is.na(rowData(se_phylum)$Phylum), ]
+# show dimensions
+dim(se_phylum_subset_by_feature)
+```
+
+**Note**: as data was agglomerated, the number of rows equal the number of Phyla used to index (in this case, just 2)
+
+Or alternatively:
+
+```{r}
+# store features of interest into phyla
+phyla <- c("Phylum:Actinobacteria", "Phylum:Chlamydiae")
+# subset by feature
+se_phylum_subset_by_feature <- se_phylum[phyla, ]
+# show dimensions
+dim(se_subset_by_feature)
+```
+
+The code above returns the not agglomerated version of the data.
+
+Fewer characteristics can be used to subset by feature:
+
+* Taxonomic rank
+* Meta-taxonomic group
+
+For subsetting by Kingdom, agglomeration does not apply, whereas for the other ranks it can be applied if necessary.
+
+#### Subset by sample and feature
+
+Finally, we can subset data by sample and feature at once. The resulting subset contains all the samples of human origin and all the features of Phyla "Actinobacteria" or "Chlamydiae".
+
+```{r}
+# subset by sample and feature and get rid of NAs
+se_subset_by_sample_feature <- se[(rowData(se)$Phylum == "Actinobacteria" | rowData(se)$Phylum == "Chlamydiae") & !is.na(rowData(se)$Phylum), colData(se)$SampleType == "Feces" | colData(se)$SampleType == "Skin" | colData(se)$SampleType == "Tongue"]
+# show dimensions
+dim(se_subset_by_sample_feature)
+```
+
+**Note**: the dimensions of `se_subset_by_sample_feature` agree with those of the previous subsets (9 columns filtered by sample and 1652 rows filtered by feature).
+
+If a study was to consider and quantify the presence of Actinobacteria as well as Chlamydiae in different sites of the human body, `se_subset_by_sample_feature` might be an ideal subset to start with.
 
 ## Conclusion
 
