--- a/04_datainfra.Rmd
+++ b/04_datainfra.Rmd
@@ -34,7 +34,7 @@ Install the development version from GitHub using `remotes` R package.
 ```{r eval=FALSE, message=FALSE}
 # install remotes 
 #install.packages("remotes")
-BiocManager::install("FelixErnst/mia")
+BiocManager::install("microbiome/mia")
 ```
 
 ### Packages    
@@ -107,9 +107,9 @@ format. Here, we provide examples for common formats.
   column names.
 
 ```{r importingcsv, message=FALSE, eval=FALSE}
-counts <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
-tax <- read.csv(tax_file)        # Taxonomy table (to rowData)
-samples <- read.csv(sample_file) # Sample data (to colData)
+counts  <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
+tax     <- read.csv(tax_file)     # Taxonomy table (to rowData)
+samples <- read.csv(sample_file)  # Sample data (to colData)
 se <- SummarizedExperiment(assays = list(counts = counts),
                            colData = samples,
                            rowData = tax)
